--- a/liveShopping/productRecommend.bak.html
+++ b/liveShopping/productRecommend.bak.html
@@ -27,7 +27,9 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <title>设置商品推荐</title>
+    <link rel="stylesheet" type="text/css" href="css/lib/dropload.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/productRecommend.css">
 </head>
@@ -38,26 +40,29 @@
         <h1>设置商品推荐</h1>
     </header>
     <nav >
-        <ul class="shop-nav clearfix">
+        <ul class="shop-nav">
             <li class="down">添加时间<i data-field="addtimeOrder"></i></li>
             <li>销量<i data-field="buysOrder"></i></li>
             <li>库存<i data-field="stocksOrder"></i></li>
         </ul>
     </nav>
     <!-- 内容 start -->
-    <main id="content">
-        <div class="lists"></div>
+    <main id="content" class="mui-content mui-scroll-wrapper">
+        <div class="mui-scroll" id="mui-scroll">
+
+        </div>
+        <div class="tac pt10 hide js-none"></div>
     </main>
     <!-- 内容 end -->
 </div>
 <script id="product-box" type="text/html">
     {{each prodList as prod i}}
     <div class="product-box clearfix opacity" >
-        <a href="javascript:;" class="fl product-img">
+        <a href="{{prod.prodUrl}}?isLiveShopping=1" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
         <div class="fr product-info">
-            <h3 class="product-title"><a href="javascript:;">{{prod.title}}</a></h3>
+            <h3 class="product-title"><a href="{{prod.prodUrl}}?isLiveShopping=1">{{prod.title}}</a></h3>
 
             <div class="buyinfo clearfix">
                 <div class="fl">
@@ -76,13 +81,20 @@
 <script src="js/lib/dropload.min.js"></script>
 <script src="js/common.js"></script>
 <script>
-    $(function(){
+    $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
+        //设置cookie
+        var uid = getCookie("uid");
+        var device = getCookie("deviceType");
+        setCookie("uid",uid,"daxmall.com");
+        setCookie("deviceType",device,"daxmall.com");
         var params = {
             addtimeOrder:"desc"
         };
-        //        排序
+        loadData("/liveshoppingManage/getInLiveshoppingProdList","POST",params);
+        dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params);
+//        排序
         $(".shop-nav li").on('click', function() {
             var field = $(this).find("i").data("field");
             params = {};
@@ -97,29 +109,26 @@
                 $(this).addClass('down');
                 params[field] = "desc";
             }
-//            重置前先清空
-            $('#content').html('<div class="lists"></div>');
-            dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true);
+            ajaxSuccess("/liveshoppingManage/getInLiveshoppingProdList","POST",params);
         });
-        $(".layout").on("click","a.recommendBtn",function () {
-            H5callApp("setThePageLoading",{loading:true});
-            var json =  {
-                "productId":$(this).data("productid"),
-                "picUrl":$(this).data("picurl"),
-                "title":$(this).data("title"),
-                "promotionPrice":$(this).data("promotionprice"),
-                "productUrl":$(this).data("producturl")
-            }
-            H5callApp("recommend",json,recommendCallback);
-            function recommendCallback(){
-                H5callApp("setThePageLoading",{loading:false});
-                alert("推荐成功");
-            }
-        })
-        dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true);
+//        $(".return").on("click", function () {
+//            window.history.back();
+//        })
+//        调app方法
+        alert("1")
+            $(".layout").on("click","a.recommendBtn",function () {
+                var json =  {
+                    "productId":$(this).data("productid"),
+                    "picUrl":$(this).data("picurl"),
+                    "title":$(this).data("title"),
+                    "promotionPrice":$(this).data("promotionprice"),
+                    "productUrl":$(this).data("producturl")
+                }
+                callApp("recommend",json);
+                alert("推荐成功")
+            })
 
-
-    });
+    })
 </script>
 </body>
 </html>
