--- a/liveShopping/productSelect.html
+++ b/liveShopping/productSelect.html
@@ -28,24 +28,21 @@
     <meta name='apple-itunes-app' content='app-id=966436668'>
     <!-- 适应移动端end -->
     <title>直播商品</title>
-    <!--<link rel="stylesheet" type="text/css" href="css/lib/mui.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/productSelect.css">
 </head>
 <body>
 <div class="layout">
     <nav >
-        <ul class="shop-nav">
+        <ul class="shop-nav clearfix">
             <li class="down">添加时间<i data-field="addtimeOrder"></i></li>
             <li>销量<i data-field="buysOrder"></i></li>
             <li>库存<i data-field="stocksOrder"></i></li>
         </ul>
     </nav>
     <!-- 内容 start -->
-    <main id="content" class="mui-content mui-scroll-wrapper">
-        <div class="mui-scroll" id="mui-scroll">
-
-        </div>
+    <main id="content">
+        <div class="lists"></div>
     </main>
     <!-- 内容 end -->
     <footer>
@@ -55,7 +52,7 @@
 </div>
 <script id="product-box" type="text/html">
     {{each prodList as prod i}}
-    <div class="product-box clearfix">
+    <div class="product-box clearfix opacity">
         <a href="{{prod.prodUrl}}" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
@@ -64,7 +61,7 @@
 
             <div class="buyinfo clearfix">
                 <div class="fl">
-                    <div class="price"><b>￥{{prod.promotionPrice}}</b><span>佣金比率：<i>{{prod.price}}</i></span></div>
+                    <div class="price"><b>￥{{prod.promotionPrice}}</b><span>佣金比率：<i>{{prod.distCommisRate}}</i></span></div>
                     <div class="peopleNum">销量: {{prod.buys}}  库存: {{prod.stocks}}  收藏: {{prod.favorite}} </div>
                 </div>
             </div>
@@ -75,30 +72,28 @@
 <script src="js/lib/zepto.min.js"></script>
 <script src="js/lib/fastclick.min.js"></script>
 <script src="js/lib/template.js"></script>
-<!--<script src="js/lib/mui.min.js"></script>-->
+<script src="js/lib/dropload.min.js"></script>
 <script src="js/common.js"></script>
 <script>
     $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
-        //设置cookie
-        var uid = getCookie("uid");
-        var device = getCookie("deviceType");
-        setCookie("uid",uid,".daxmall.com");
-        setCookie("deviceType",device,".daxmall.com");
+
         var params = {
             addtimeOrder:"desc"
         };
-        ajaxSuccess("/liveshoppingManage/getInLiveshoppingProdList","POST",params,callback);
+        dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true,isHasProdCallback);
 //        判断有没有直播商品
-        function callback(){
+        function isHasProdCallback(){
             if($(".product-box").size()==0){
-                $("#mui-scroll").addClass("noProduct");
+                $("#content").addClass("noProduct");
+                $(".dropload-noData").html("");
             }else {
                 $(".allManage").css("display","block");
                 $(".addProd").width("50%");
                 //        排序
-                $(".shop-nav li").on('click', function() {
+                $(".shop-nav li").on('click', function(e) {
+                    e.preventDefault();
                     var field = $(this).find("i").data("field");
                     params = {};
                     if ($(this).hasClass("up")) {
@@ -112,21 +107,24 @@
                         $(this).addClass('down');
                         params[field] = "desc";
                     }
-                    ajaxSuccess("/liveshoppingManage/getInLiveshoppingProdList","POST",params);
+                    //重置前先清空
+//                    $('#content').html('<div class="lists"></div>');
+                    dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true);
                 });
             }
         }
 
 //        同步动力店
-        callApp("setTBRightButton",{text:"同步动力店商品",enable:true});
-        if (isIOS()) {
-            connectWebViewJavascriptBridge(function (bridge) {
-                bridge.registerHandler("notifyTBRightButtonClicked", function (data, responseCallback) {
-                    responseCallback(notifyTBRightButtonClicked());
-                });
-
-            });
-        }
+        H5callApp("setTBRightButton",{text:"同步动力店商品",enable:true});
+//        if (isIOS()) {
+//            connectWebViewJavascriptBridge(function (bridge) {
+//                bridge.registerHandler("notifyTBRightButtonClicked", function (data, responseCallback) {
+//                    responseCallback(notifyTBRightButtonClicked());
+//                });
+//
+//            });
+//        }
+        IOSCallH5("notifyTBRightButtonClicked");
         window.notifyTBRightButtonClicked = function(){
             $.ajax({
                 url:"/liveshoppingManage/synShopProd",
@@ -141,8 +139,8 @@
                     }
                 },
                 error: function (err) {
-                    console.log(err)
-                    alert(err.status+" "+err.statusText+" "+err.readyState+" "+err.responseText)
+                    console.info(err)
+                    alert('Ajax error!'+JSON.stringify(err));
                 }
             })
         }
