--- a/liveShopping/productSelect.html
+++ b/liveShopping/productSelect.html
@@ -46,13 +46,13 @@
     </main>
     <!-- 内容 end -->
     <footer>
-        <a href="/html/liveShopping/productAddAndDel.html?type=add" class="addProd">添加商品</a>
-        <a href="/html/liveShopping/productAddAndDel.html?type=del" class="allManage">批量管理</a>
+        <a href="javascript:;" class="addProd">添加商品</a>
+        <a href="javascript:;" class="allManage">批量管理</a>
     </footer>
 </div>
 <script id="product-box" type="text/html">
     {{each prodList as prod i}}
-    <div class="product-box clearfix opacity">
+    <div class="product-box clearfix">
         <a href="{{prod.prodUrl}}" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
@@ -124,7 +124,7 @@
                 url:"/liveshoppingManage/synShopProd",
                 type: "GET",
                 dataType: "json",
-                async:false,
+                async:async,
                 success: function (data) {
                     if(data.code==1){
                         alert("同步成功！")
@@ -137,7 +137,7 @@
                 error: function (err) {
                     H5callApp("setThePageLoading",{loading:false});
                     console.info(err)
-                    alert('Ajax error!'+JSON.stringify(err));
+                    alert('Server error!'+JSON.stringify(err));
                 }
             })
         }
@@ -147,6 +147,25 @@
 //        window.notifyTBBackClicked = function(type){
 //            H5callApp("requestCloseWeb",{});
 //        }
+        $("footer").on("click","a.addProd", function () {
+            H5callApp("startViewToShow",{
+                url:baseUrl+"html/liveShopping/productAddAndDel.html?type=add",
+                isLoadding:true,
+                isNotifyResult:true
+            });
+        })
+
+        $("footer").on("click","a.allManage", function () {
+            H5callApp("startViewToShow",{
+                url:baseUrl+"html/liveShopping/productAddAndDel.html?type=del",
+                isLoadding:true,
+                isNotifyResult:true
+            });
+        })
+        IOSCallH5("notifyViewResult");
+        window.notifyViewResult = function(){
+            window.location.reload();
+        }
     })
 </script>
 </body>
