--- a/liveShopping/coupon.html
+++ b/liveShopping/coupon.html
@@ -34,7 +34,6 @@
 <body>
 <div class="layout">
     <header>
-        <!--<a href="#" class="return"><</a>-->
         <h1>可派发优惠券</h1>
     </header>
     <!-- 内容 start -->
@@ -44,7 +43,7 @@
     <!-- 内容 end -->
     <footer id="submit">确定</footer>
 </div>
-<script id="product-box" type="text/html">
+<script id="data-box" type="text/html">
     {{each canDrawCouponList as prod i}}
     <div class="coupon-box clearfix">
         <img class="coupon-bg" src="image/youhuiquan@2x.png" alt=""/>
@@ -75,38 +74,20 @@
     </div>
     {{/each}}
 </script>
-<script src="js/lib/zepto.min.js"></script>
-<script src="js/lib/fastclick.min.js"></script>
-<script src="js/lib/template.js"></script>
-<!--<script src="js/lib/dropload.min.js"></script>-->
+<script src="/html/common/js/lib/zepto.min.js"></script>
+<script src="/html/common/js/lib/fastclick.min.js"></script>
+<script src="/html/common/js/lib/template.js"></script>
 <script src="js/common.js"></script>
 <script>
     $(function () {
         // 点击延迟处理
         FastClick.attach(document.body);
-        H5callApp("setThePageLoading",{loading:true});
-        $.ajax({
-            url:"/coupon/getDrawCouponList" ,
-            type: "GET",
-            dataType: "json",
-            async:async,
-            success: function (data) {
-                if(data.canDrawCouponList){
-                    var data = data;
-                    var html = template('product-box', data);
-                    $('.lists').append(html);
-                    // 如果没有数据
-                }else{
-                    $("#content").addClass("noProduct");
-                }
-                H5callApp("setThePageLoading",{loading:false});
-            },
-            error: function (err) {
-                H5callApp("setThePageLoading",{loading:false});
-                console.info(err)
-                alert('Server error!'+JSON.stringify(err));
+        dataListLoad("/coupon/getDrawCouponList","GET",{},true,isHasData);
+        function isHasData(data){
+            if(JSON.stringify(data)=="{}"){
+                $("#content").addClass("noProduct");
             }
-        });
+        }
         //        复选框
         $(".layout").on("click", "input[type='checkbox']", function () {
             if ($("input[type='checkbox']:checked").size() != 0) {
@@ -117,26 +98,32 @@
         })
 //        数字框
         $(".layout").on("click",".numbox-btn-minus", function () {
+
             var numberbox =$(this).next()
-            if(numberbox.val()>0){
-                numberbox.val(numberbox.val()-1)
+            var boxVal = parseInt(numberbox.val());
+            if(boxVal>0){
+                numberbox.val(boxVal-1);
             }
         })
         $(".layout").on("click",".numbox-btn-plus", function () {
+
             var numberbox =$(this).prev()
-            var a = numberbox.val()
-            var b = numberbox.attr("max")
-            if(a<b){
-                numberbox.val(parseInt(numberbox.val())+1)
+            var boxVal = parseInt(numberbox.val());
+            var maxNum = parseInt(numberbox.attr("max"));
+            if(boxVal<maxNum){
+                ++boxVal;
+                numberbox.val(boxVal);
             }
         })
-//        返回
-//        $(".return").on("click", function () {
-//            window.history.back();
-//        })
+        $(".layout").on("change","input[type='number']", function () {
+            var a = parseInt($(this).val());
+            var b = parseInt($(this).attr("max"));
+            if(a>b){
+                $(this).val(b);
+            }
+        })
 //        派卷
         $(".layout").on("click", ".enabled", function () {
-            H5callApp("setThePageLoading",{loading:true});
             var distConfig = []
             $("input[type='checkbox']:checked").each(function (i) {
                 distConfig[i]={}
@@ -145,34 +132,20 @@
             })
             console.log(JSON.stringify(distConfig))
             var params = {"distConfig":JSON.stringify(distConfig)};
-            console.log(params)
-            $.ajax({
-                url:"/coupon/submitDistCoupConfig",
-                type: "POST",
-                data: params,
-                dataType: "json",
-                async:async,
-                success: function (data) {
-                    console.info('success',data)
-                    if(!!data.code){
-                        H5callApp("sendCoupon",{couponId: data.id},callback);
-                        function callback(){
-                            H5callApp("setThePageLoading",{loading:false});
-                            alert("派卷成功");
-                            window.location.reload()
-                        }
 
-                    }else {
+            dataListLoad("/coupon/submitDistCoupConfig","POST",params,false,getCouponCallback);
+            function getCouponCallback(data){
+                if(!!data.code){
+                    H5callApp("sendCoupon",{couponId: data.id},sendCouponCallback);
+                    function sendCouponCallback(){
                         H5callApp("setThePageLoading",{loading:false});
-                        alert(data.msg)
+                        window.location.reload()
                     }
-                },
-                error: function (err) {
-                    H5callApp("setThePageLoading",{loading:false});
-                    console.info(err)
-                    alert('Server error!'+JSON.stringify(err));
+                }else {
+                    alert(data.msg);
                 }
-            })
+            }
+
         })
 
     })
