--- a/liveShopping/productSelect.html
+++ b/liveShopping/productSelect.html
@@ -50,9 +50,9 @@
         <a href="javascript:;" class="allManage">批量管理</a>
     </footer>
 </div>
-<script id="product-box" type="text/html">
+<script id="data-box" type="text/html">
     {{each prodList as prod i}}
-    <div class="product-box clearfix">
+    <div class="product-box clearfix opacity">
         <a href="{{prod.prodUrl}}" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
@@ -69,10 +69,10 @@
     </div>
     {{/each}}
 </script>
-<script src="js/lib/zepto.min.js"></script>
-<script src="js/lib/fastclick.min.js"></script>
-<script src="js/lib/template.js"></script>
-<script src="js/lib/dropload.min.js"></script>
+<script src="/html/common/js/lib/zepto.min.js"></script>
+<script src="/html/common/js/lib/fastclick.min.js"></script>
+<script src="/html/common/js/lib/template.js"></script>
+<script src="/html/common/js/lib/dropload.min.js"></script>
 <script src="js/common.js"></script>
 <script>
     $(function () {
@@ -80,23 +80,23 @@
         FastClick.attach(document.body);
 
         var params = {
-            addtimeOrder:"desc"
+            addtimeOrder:"desc",
+            curPageNO:1
         };
-        dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true,isHasProdCallback);
-//        判断有没有直播商品
-        function isHasProdCallback(){
+        var pageFlag = true;
+        dataListLoad("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true,sortCallback);
+        function sortCallback(){
             if($(".product-box").size()==0){
                 $("#content").addClass("noProduct");
-                $(".dropload-noData").html("");
             }else {
-                $(".allManage").css("display","block");
+                $(".allManage").css("display", "block");
                 $(".addProd").width("50%");
+
                 //        排序
                 $(".shop-nav li").on('click', function(e) {
-                    debugger
-                    e.preventDefault();
                     var field = $(this).find("i").data("field");
-                    params = {};
+                    pageFlag = true;
+                    params = {curPageNO:1};
                     if ($(this).hasClass("up")) {
                         $(this).removeClass("up").addClass('down');
                         params[field] = "desc";
@@ -110,36 +110,63 @@
                     }
                     //重置前先清空
                     $('#content').html('<div class="lists"></div>');
-                    dropload("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true);
+                    dataListLoad("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true);
                 });
-            }
-        }
 
+                $(window).scroll(function() {
+                    if (pageFlag && $('.lists').height() - $(window).scrollTop() - $(window).height()<50){
+                        params.curPageNO++;
+                        pageFlag = false;
+                        dataListLoad("/liveshoppingManage/getInLiveshoppingProdList","POST",params,true,pageCallback);
+                        function pageCallback(data){
+                            pageFlag = true;
+                            if(JSON.stringify(data)=="{}"){
+                                pageFlag = false;
+                                $('.lists').append('<div class="dropload-noData">暂无更多商品</div>');
+                            }
+                        }
+                    }
+                });
+
+
+            }
+
+        }
 //        同步动力店
         H5callApp("setTBRightButton",{text:"同步动力店商品",enable:true});
+        window.onunload = function () {
+            H5callApp("setTBRightButton",{text:"",enable:true});
+        }
         IOSCallH5("notifyTBRightButtonClicked");
+        var SyncShop = true;
         window.notifyTBRightButtonClicked = function(){
-            H5callApp("setThePageLoading",{loading:true});
-            $.ajax({
-                url:"/liveshoppingManage/synShopProd",
-                type: "GET",
-                dataType: "json",
-                async:async,
-                success: function (data) {
-                    if(data.code==1){
-                        alert("同步成功！")
-                        window.location.reload();
-                    }else {
-                        alert(data.msg);
+            if(SyncShop){
+                SyncShop = false;
+                H5callApp("setThePageLoading",{loading:true});
+                $.ajax({
+                    url:"/liveshoppingManage/synShopProd",
+                    type: "GET",
+                    dataType: "json",
+                    async:async,
+                    success: function (data) {
+                        SyncShop = true;
+                        if(data.code==1){
+                            alert("同步成功！")
+                            window.location.reload();
+                        }else {
+                            alert(data.msg);
+                        }
+                        H5callApp("setThePageLoading",{loading:false});
+                    },
+                    error: function (err) {
+                        SyncShop = true;
+                        H5callApp("setThePageLoading",{loading:false});
+                        console.info(err)
+                        alert('请求失败!'+JSON.stringify(err));
                     }
-                    H5callApp("setThePageLoading",{loading:false});
-                },
-                error: function (err) {
-                    H5callApp("setThePageLoading",{loading:false});
-                    console.info(err)
-                    alert('Server error!'+JSON.stringify(err));
-                }
-            })
+                })
+            }
+
         }
 //        控制app左上角按钮关闭网页
 //        H5callApp("setIsInterceptBack",{isIntercept:true});
@@ -148,24 +175,35 @@
 //            H5callApp("requestCloseWeb",{});
 //        }
         $("footer").on("click","a.addProd", function () {
-            H5callApp("startViewToShow",{
-                url:baseUrl+"html/liveShopping/productAddAndDel.html?type=add",
-                isLoadding:true,
-                isNotifyResult:true
-            });
+            if(isIOS()){
+                window.location.href = baseUrl+"html/liveShopping/productAddAndDel.html?type=add";
+            }else {
+                H5callApp("startViewToShow",{
+                    url:baseUrl+"html/liveShopping/productAddAndDel.html?type=add",
+                    isLoadding:true,
+                    isNotifyResult:true
+                });
+            }
+
         })
 
         $("footer").on("click","a.allManage", function () {
-            H5callApp("startViewToShow",{
-                url:baseUrl+"html/liveShopping/productAddAndDel.html?type=del",
-                isLoadding:true,
-                isNotifyResult:true
-            });
+            if(isIOS()){
+                window.location.href = baseUrl+"html/liveShopping/productAddAndDel.html?type=del";
+            }else {
+                H5callApp("startViewToShow",{
+                    url:baseUrl+"html/liveShopping/productAddAndDel.html?type=del",
+                    isLoadding:true,
+                    isNotifyResult:true
+                });
+            }
+
         })
-        IOSCallH5("notifyViewResult");
+//        IOSCallH5("notifyViewResult");
         window.notifyViewResult = function(){
             window.location.reload();
         }
+
     })
 </script>
 </body>
