--- a/liveShopping/productShow.html
+++ b/liveShopping/productShow.html
@@ -46,29 +46,29 @@
 
     </footer>
 </div>
-<script id="product-box" type="text/html">
+<script id="data-box" type="text/html">
     {{each prodList as prod i}}
     <div class="product-box clearfix">
-        <a href="{{prod.prodUrl}}&isLiveShopping=1&mallId={{mallId}}" class="fl product-img">
+        <a href="{{prod.prodUrl}}&mallId={{mallId}}&isLiveShopping=1" class="fl product-img">
             <img src="{{prod.picUrl}}" alt="{{prod.title}}"/>
         </a>
         <div class="fr product-info">
-            <h3 class="product-title"><a href="{{prod.prodUrl}}&isLiveShopping=1&mallId={{mallId}}">{{prod.title}}</a></h3>
+            <h3 class="product-title"><a href="{{prod.prodUrl}}&mallId={{mallId}}&isLiveShopping=1">{{prod.title}}</a></h3>
             <div class="buyinfo clearfix">
                 <div class="fl">
                     <div class="price"><b>￥{{prod.promotionPrice}}</b><s>￥{{prod.price}}</s></div>
                     <div class="peopleNum">{{prod.buys}}人已购买</div>
                 </div>
-                <a href="{{prod.prodUrl}}&isLiveShopping=1&mallId={{mallId}}" class="fr button buyBtn main-color">去抢购</a>
+                <a href="{{prod.prodUrl}}&mallId={{mallId}}&isLiveShopping=1" class="fr button buyBtn main-color">去抢购</a>
             </div>
         </div>
     </div>
     {{/each}}
 </script>
-<script src="js/lib/zepto.min.js"></script>
-<script src="js/lib/fastclick.min.js"></script>
-<script src="js/lib/template.js"></script>
-<script src="js/lib/dropload.min.js"></script>
+<script src="/html/common/js/lib/zepto.min.js"></script>
+<script src="/html/common/js/lib/fastclick.min.js"></script>
+<script src="/html/common/js/lib/template.js"></script>
+<script src="/html/common/js/lib/dropload.min.js"></script>
 <script src="js/common.js"></script>
 <script>
     $(function () {
@@ -80,6 +80,7 @@
         }
         function callback(data){
             $("header .fl").data("content",data.prodCount);//在css中，伪元素的content是能读取到data属性的。
+          
         }
         dropload("/m_search/liveShoppingProdlist","GET",params,true,callback,mallId);
     })
